Final validation